--- a/src/_locales/uk_UA/messages.json
+++ b/src/_locales/uk_UA/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands.",
+    "message": "Застосовуйте навігацію, керуйте та переглядайте за допомогою жестів миші! Доповнення для жестів миші містить багато налаштувань з різноманітними командами.",
     "description": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
@@ -36,7 +36,7 @@
     "description": "Extras"
   },
   "navigationExclusions": {
-    "message": "Exclusions",
+    "message": "Винятки",
     "description": "Exclusions"
   },
   "navigationAbout": {
@@ -44,7 +44,7 @@
     "description": "About"
   },
   "settingLabelMouseButton": {
-    "message": "Activation button",
+    "message": "Кнопка активації",
     "description": "Activation button"
   },
   "settingLabelMouseButtonLeft": {
@@ -72,7 +72,7 @@
     "description": "Strict"
   },
   "settingLabelMatchingAlgorithmShapeIndependent": {
-    "message": "Shape-Independent",
+    "message": "Незалежний від форми",
     "description": "Shape-Independent"
   },
   "settingLabelTimeoutActive": {
@@ -84,7 +84,7 @@
     "description": "Duration"
   },
   "settingLabelSuppressionKey": {
-    "message": "Deactivation key",
+    "message": "Ключ деактивації",
     "description": "Deactivation key"
   },
   "settingLabelNoneKey": {
@@ -136,7 +136,7 @@
     "description": "Display command"
   },
   "settingLabelCommandFontColor": {
-    "message": "Font color",
+    "message": "Колір шрифту",
     "description": "Font color"
   },
   "settingLabelCommandBackgroundColor": {
@@ -164,11 +164,11 @@
     "description": "Captures a new mouse gesture while the button is held down."
   },
   "settingDescriptionMatchingAlgorithm": {
-    "message": "Determines how the gestures are compared to find the best matching gesture.",
+    "message": "Визначає спосіб порівняння жестів, щоб знайти найкращий відповідний жест.",
     "description": "Determines how the gestures are compared to find the best matching gesture."
   },
   "settingDescriptionMatchingAlgorithmLink": {
-    "message": "Learn about the differences here",
+    "message": "Дізнайтеся про відмінності тут",
     "description": "Learn about the differences here"
   },
   "settingDescriptionTimeoutActive": {
@@ -184,11 +184,11 @@
     "description": "Prevents a gesture from being triggered while the modifier key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "The minimum distance the mouse must be moved until the start of a gesture is recognized.",
+    "message": "Мінімальна відстань, на яку необхідно перемістити мишу, доки не визначається початок жесту.",
     "description": "The minimum distance the mouse must be moved until the start of a gesture is recognized."
   },
   "settingDescriptionDeviationTolerance": {
-    "message": "The permissible gesture deviation that should still be recognized as a match.",
+    "message": "Допустиме відхилення жестів, яке все ще слід розпізнати як збіг.",
     "description": "The permissible gesture deviation that should still be recognized as a match."
   },
   "settingDescriptionDisplayTrace": {
@@ -228,7 +228,7 @@
     "description": "Search gestures"
   },
   "gestureHintNoSearchResults": {
-    "message": "No search results found",
+    "message": "Результатів пошуку не знайдено",
     "description": "No search results found"
   },
   "extraLabelRockerActive": {
@@ -300,7 +300,7 @@
     "description": "URL pattern already exists."
   },
   "exclusionsHintNoEntries": {
-    "message": "No entries available",
+    "message": "Записів немає",
     "description": "No entries available"
   },
   "aboutBackup": {
@@ -752,7 +752,7 @@
     "description": "Pins or unpins the current Tab."
   },
   "commandDescriptionToggleMute": {
-    "message": "Mutes or unmutes the current tab.",
+    "message": "Вимикає або вмикає звук поточної вкладки.",
     "description": "Mutes or unmutes the current tab."
   },
   "commandDescriptionToggleReaderMode": {
@@ -916,7 +916,7 @@
     "description": "Downloads the image on which the gesture started."
   },
   "commandDescriptionSaveLink": {
-    "message": "Downloads either a selected url or the link on which the gesture started.",
+    "message": "Завантажуйте або вибрану Url-адресу, або посилання, за яким почався жест.",
     "description": "Downloads either a selected url or the link on which the gesture started."
   },
   "commandDescriptionPrintTab": {
